--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "types": "./typings/index.d.ts",
   "scripts": {
-    "postinstall": "node postInstall.js"
+    "postinstall": "node postInstall.js",
+    "examples.login": "node examples/login.js"
   },
   "repository": {
     "type": "git",
