--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
     "eslint-plugin-import": "^2.25.3",
     "figlet": "^1.5.2",
     "typescript": "^4.5.2"
+  },
+  "engines": {
+    "node": ">=16.6.0",
+    "npm": ">=7.0.0"
   }
 }
