--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "tyblox",
+  "name": "tyblox.js",
   "version": "0.0.1",
   "description": "",
   "main": "src/index.js",
   "types": "./typings/index.d.ts",
   "scripts": {
-    "postinstall": "node postInstall.js",
+    "postinstall": "npm i --save-dev figlet chalk && node postInstall.js",
     "examples.login": "node examples/login.js"
   },
   "repository": {
