--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyblox.js",
-  "version": "0.0.1",
+  "version": "0.1.0-alpha",
   "description": "",
   "main": "src/index.js",
   "types": "./typings/index.d.ts",
