--- a/.github/workflows/publish-dev.yml
+++ b/.github/workflows/publish-dev.yml
@@ -2,9 +2,10 @@ name: Tests
 on:
   workflow_dispatch:
   release:
-    types: [created]
+    types: [prereleased]
 jobs:
   build:
+    if:
     runs-on: ubuntu-latest
     steps:
       # Setup repo
@@ -29,7 +30,11 @@ jobs:
 
       # Runs npm install
       - name: Install
-        run: npm install
+        run: npm ci
+
+      # Tests
+      - name: Tests
+        run: npm run test
 
       # Deprecate old versions
       - name: Deprecate old versions
