--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "./typings/index.d.ts",
   "scripts": {
     "postinstall": "npm i --save-dev figlet chalk && node postInstall.js",
+    "test": "npm run examples.login",
     "examples.login": "node examples/login.js"
   },
   "repository": {
